# truenas_scram

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-test.yml
debian/: changelog  clean  control  copyright  libtruenas-scram-dev.install  libtruenas-scram1.install  rules
src/pyscram/: crypto_datum.c  error.c  py_client_final.c  py_client_first.c  py_scram_verify.c  py_server_final.c  py_server_first.c  scram_auth_data.c  truenas_pyscram.c  truenas_pyscram.h
src/scram/: scram.h  scram_attr_parse.c  scram_client_final.c  scram_client_first.c  scram_private.h  scram_server_final.c  scram_server_first.c  scram_utils.c  truenas_scram.h
tests/: test_auth_data.py  test_client_final.py  test_client_first.py  test_constants.py  test_nonce.py  test_rfc_parsing.py  test_server_final.py  test_server_first.py  test_verification.py
