[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truenas_pyscram"
version = "0.1.0"
description = "TrueNAS SCRAM authentication module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TrueNAS Team"},
]
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration"
]

[tool.setuptools]

